--- a/cameronrasmo-portfolio/src/projects.json
+++ b/cameronrasmo-portfolio/src/projects.json
@@ -7,7 +7,7 @@
             "imgUrl": "./img/project/keder.png",
             "bgColor": "#7dffec",
             "githubUrl": "https://github.com/cameronrasmo/keder-repo",
-            "siteUrl": "https://keder.now.sh/",
+            "siteUrl": "https://cr-keder.now.sh/",
             "next": "name badge",
             "id": 1
         },
